; ModuleID = '/home/carl/AnghaBench/libgit2/tests/odb/extr_largefiles.c_test_odb_largefiles__read_into_memory_rejected_on_32bit.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/odb/extr_largefiles.c_test_odb_largefiles__read_into_memory_rejected_on_32bit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [25 x i8] c"GITTEST_INVASIVE_FS_SIZE\00", align 1
@.str.1 = private unnamed_addr constant [24 x i8] c"GITTEST_INVASIVE_MEMORY\00", align 1
@.str.2 = private unnamed_addr constant [13 x i8] c"GITTEST_SLOW\00", align 1
@odb = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_odb_largefiles__read_into_memory_rejected_on_32bit() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32*, align 8
  store i32* null, i32** %2, align 8
  %3 = call i32 @cl_is_env_set(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0))
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %5, label %11

5:                                                ; preds = %0
  %6 = call i32 @cl_is_env_set(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.1, i64 0, i64 0))
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %8, label %11

8:                                                ; preds = %5
  %9 = call i32 @cl_is_env_set(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.2, i64 0, i64 0))
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %13, label %11

11:                                               ; preds = %8, %5, %0
  %12 = call i32 (...) @cl_skip()
  br label %13

13:                                               ; preds = %11, %8
  %14 = call i32 @writefile(i32* %1)
  %15 = load i32, i32* @odb, align 4
  %16 = call i32 @git_odb_read(i32** %2, i32 %15, i32* %1)
  %17 = call i32 @cl_git_fail(i32 %16)
  %18 = load i32*, i32** %2, align 8
  %19 = call i32 @git_odb_object_free(i32* %18)
  ret void
}

declare dso_local i32 @cl_is_env_set(i8*) #1

declare dso_local i32 @cl_skip(...) #1

declare dso_local i32 @writefile(i32*) #1

declare dso_local i32 @cl_git_fail(i32) #1

declare dso_local i32 @git_odb_read(i32**, i32, i32*) #1

declare dso_local i32 @git_odb_object_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
